pkgman: Split "interactive" and "show progress" logic.

Previously we didn't show progress in non-interactive mode. Now
we do, so long as stdout is a TTY.

Fixes #14603.